--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,6 +9,9 @@
 
     <change-notes><![CDATA[
       1.0 - First version
+      1.1 - Version issues
+      1.2 - fix api key
+      1.3 - Download action
       ]]>
     </change-notes>
 
