--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,6 +13,7 @@
       1.1 - Version issues
       1.2 - fix api key
       1.3 - Download action
+      1.4 - Multiple choice
       ]]>
     </change-notes>
 
